# X-17-BlackVector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  roadmap.md
docs/derivations/: orbital_mechanics.md  reentry_dynamics.md
simulations/examples/: reentry_example.py
src/blackvector/: __init__.py  cli.py
src/blackvector/core/: __init__.py  constants.py
src/blackvector/core/physics/: __init__.py  atmosphere.py  orbital.py  propulsion.py  reentry.py
src/blackvector/core/simulation/: __init__.py  engine.py
src/blackvector/models/: __init__.py  vehicle.py
tests/: __init__.py
tests/unit/: test_physics.py
